# Information-Retrieval-Course

./: README.md  pyproject.toml
data/Sherlock_Holmes/: Silver Blaze.txt  The Adventure of the Cardboard Box.txt  The Stockbroker’s Clerk.txt  The Yellow Face.txt
docsearch/: document_procesor.py  inverted_index.py  playground.py
exercise/: SQL_for_IR_IE_FH_Campus_Wien.ipynb
