[tool.poetry]
name = "information-retrieval-course"
version = "0.1.0"
description = ""
authors = ["Liad Magen <liad.magen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
